2007-07-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ruby.lang: properly detect all
	predefined variables.

2007-07-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/d.lang: port to the new format.

2007-07-26  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcebuffer.[ch]: add a function to 
	force the highlighting of a not yet exposed region to use
	when printing.

2007-07-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ruby.lang:: fix some number
	highlighting issues. Patch by Kristoffer Lundén, fixes
	bug #454122

2007-07-25  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/c.lang: split storage-class
	* gtksourceview/language-specs/changelog.lang:: highlight bullet
	* gtksourceview/language-specs/ruby.lang: split booleans and
	nil from the pseudovariables context and use def:special-value
	to highlight them.

2007-07-23  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/gtksourcelanguage.c:
	* gtksourceview/gtksourcelanguage-parser-2.c:

	Fix compilation with MSVC, fixes bug #459576, patch by
	Elizabeth Smith.

2007-07-22  Paolo Maggi  <paolo@gnome.org>

	* gtksourceview/gtksourcecontextengine.c (set_tag_style): cleanup
	the code a bit and do not crash when info == NULL
	* gtksourceview/gtksourcestylescheme.c
	(_gtk_source_style_scheme_new_from_file): do not crash when loading
	a invalid style scheme

2007-07-19  Paolo Borelli  <pborelli@katamail.com>

	* docs/reference/gtksourceview-2.0-sections.txt:
	* gtksourceview/gtksourcestylemanager.c:
	* gtksourceview/gtksourcestylemanager.h:
	* gtksourceview/gtksourcelanguagemanager.c:

	Minor API documentation fixes.

2007-07-17  Paolo Maggi  <paolo@gnome.org>

	Implements new gtk_source_language_get_style_ids and
	gtk_source_language_get_style_name functions.
	
	* gtksourceview/gtksourcecontextengine.c (set_tag_style): check
	for dependencies cycles. Adapt the code to the fact the 